<resources>
    <string name="app_name" translatable="false">KotlinTesting</string>
    <string name="button">Button</string>
    <string name="fresco">Fresco</string>
    <string name="permission_denied_toast" translatable="false">This sample app needs storage permissions to load images</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navdrawer_title">@string/app_name</string>
    <string name="navdrawer_subtitle">frescolib.org</string>
    <string name="action_settings">Settings</string>
    <string name="category_drawee">Drawee</string>
    <string name="drawee_simple_title">Simple Drawee</string>
    <string name="drawee_simple_help">Basic SimpleDraweeView example that just sets the image URI.</string>
    <string name="drawee_media_picker_title">Media Provider</string>
    <string name="drawee_media_picker_help">Select an image by pressing one of the media picker buttons.</string>
    <string name="drawee_media_picker_button_action_open_document">ACTION_OPEN_DOCUMENT</string>
    <string name="drawee_media_picker_action_open_document_not_supported">Intent.ACTION_OPEN_DOCUMENT is only supported by Kitkat and above!</string>
    <string name="drawee_media_picker_button_action_get_content">ACTION_GET_CONTENT</string>
    <string name="drawee_media_picker_no_image">No image selected.</string>
    <string name="drawee_media_picker_button_action_pick">ACTION_PICK</string>
    <string name="drawee_scale_type_title">Scale Type</string>
    <string name="drawee_scale_type_help">Select either the landscape or portrait picture. Then select a scale type to apply for the large Drawee.</string>
    <string name="drawee_span_simple_title">Simple DraweeSpan</string>
    <string name="drawee_span_simple_text">Text with an # inline image using a DraweeSpan.</string>
    <string name="drawee_span_simple_help">This example shows how to render text with an inline image. Change the scale type using the drop-down menu.</string>
    <string name="drawee_rounded_corners_title">Rounded Corners</string>
    <string name="drawee_hierarchy_title">Placeholder, Progress, Failure</string>
    <string name="drawee_rotation_title">Rotation</string>
    <string name="drawee_rotation_help">Change the used RotationOptions using the drop-down menu on top.</string>
    <string name="drawee_recycler_title">Recycler View</string>
    <string name="drawee_transition_title">Drawee Transition</string>
    <string name="drawee_transition_help">Tap the image to start the activity transition.</string>
    <string name="drawee_transition_details_title">Image Detail Activity</string>
    <string name="drawee_transition_details_help">This is the second activity. Press back to reverse the transition.</string>
    <string name="category_pipeline">Image Pipeline</string>
    <string name="imagepipeline_notification_title">Notifications</string>
    <string name="imagepipeline_notification_button">Create Notification</string>
    <string name="imagepipeline_notification_content_title">Fresco Says Hello</string>
    <string name="imagepipeline_notification_content_text">This notification shows a bitmap that has been loaded by Fresco.</string>
    <string name="imagepipeline_notification_help">Clicking on the button will create a new notification using a BaseBitmapDataSubscriber.</string>
    <string name="imagepipeline_notification_channel_name">Fresco showcase app notification channel</string>
    <string name="imagepipeline_notification_channel_description">Notifications from the Fresco showcase app will be sent via this channel.</string>
    <string name="imagepipeline_postprocessor_title">Post-Processor</string>
    <string name="imagepipeline_postprocessor_help">Change the applied post-processor using the drop-down menu on top. Use the refresh button to re-run uncached post-processors.</string>
    <string name="imagepipeline_postprocessor_show_original">Original</string>
    <string name="imagepipeline_postprocessor_set_greyscale_slow">Grey Scale Post-Processor (slow)</string>
    <string name="imagepipeline_postprocessor_set_greyscale">Grey Scale Post-Processor</string>
    <string name="imagepipeline_postprocessor_set_watermark">Watermark Post-Processor</string>
    <string name="imagepipeline_postprocessor_set_watermark_cached">Watermark Post-Processor (cached)</string>
    <string name="imagepipeline_postprocessor_set_blur">Blur Post-Processor</string>
    <string name="imagepipeline_postprocessor_set_scaling_blur">Scaling Blur Post-Processor</string>
    <string name="imagepipeline_postprocessor_refresh">Refresh</string>
    <string name="imagepipeline_prefetch_title">Prefetch</string>
    <string name="imagepipeline_prefetch_help">1. Clear the cache\n2. Toggle images, they show slowly\n3. Hide the images\n4. Clear the cache\n5. Prefetch\n6. Show the images, they load fast!</string>
    <string name="imagepipeline_resizing_title">Resizing</string>
    <string name="imagepipeline_resizing_help">Change the resizing mode using the drop-down menu on top. Tap the image to refresh. Enable the debug overlay to see image dimensions.</string>
    <string name="imagepipeline_resizing_refresh">Refresh</string>
    <string name="imagepipeline_resizing_disabled">No resizing</string>
    <string name="imagepipeline_media_variations_title">Media Variations</string>
    <string name="imagepipeline_media_variations_individual_variants">Individual variants (click to load)</string>
    <string name="imagepipeline_media_variations_combined_request">Combined image request (click to refresh)</string>
    <string name="imagepipeline_media_variations_clear_cache">Clear cache and reset</string>
    <string name="imagepipeline_media_variations_restart_toast">Cache cleared. Please restart the app to test further.</string>
    <string name="imagepipeline_media_variations_mode_title">Mode</string>
    <string name="imagepipeline_media_variations_mode_media_id">Media ID in request</string>
    <string name="imagepipeline_media_variations_mode_listed_variants">Variants listed in request</string>
    <string name="imagepipeline_media_variations_toast_mode_media_id">Using a media ID added to the image request</string>
    <string name="imagepipeline_media_variations_toast_mode_listed_variants">Using a list of variants added to the image request</string>
    <string name="imagepipeline_partial_request_title">Partial Image Loading</string>
    <string name="button_load_partial">Load Partial</string>
    <string name="button_load_full">Load Full</string>
    <string name="imagepipeline_qualified_resource_title">Qualified Resource URI</string>
    <string name="imagepipeline_qualified_resource_help">Demonstration of loading a resource using a qualifying resource URI. This allows for loading resources that are not part of the application\'s main package.</string>
    <string name="imagepipeline_bitmap_factory_title">Platform Bitmap Factory</string>
    <string name="imagepipeline_bitmap_factory_help">This fragment\'s code demonstrates how to create managed Bitmaps using the PlatformBitmapFactory.</string>
    <string name="imagepipeline_bitmap_factory_case_create_basic">Create Basic</string>
    <string name="imagepipeline_bitmap_factory_case_create_cropped">Create Cropped</string>
    <string name="imagepipeline_bitmap_factory_case_create_scaled">Create Scaled</string>
    <string name="imagepipeline_bitmap_factory_case_create_transformed">Create Transformed</string>
    <string name="category_format">Image Format</string>
    <string name="format_switch_checker_board">Checker board background</string>
    <string name="format_gif_title">GIF</string>
    <string name="format_gif_help">Select a size in the spinner to start playing that file. The animation has 36 frames and plays at 30 FPS.</string>
    <string name="format_gif_label_small">Small (256x256 px)</string>
    <string name="format_gif_label_medium">Medium (512x512 px)</string>
    <string name="format_gif_label_large">Large (1024x1024 px)</string>
    <string name="format_webp_title">WebP</string>
    <string name="format_webp_static_help">The above Drawee displays a lossy WebP image.</string>
    <string name="format_webp_translucent_help">The above Drawee displays a loss-less WebP image with semi-transparent areas.</string>
    <string name="format_webp_animated_help">The above Drawee displays an animated WebP image</string>
    <string name="format_pjpeg_title">Progressive JPEG</string>
    <string name="format_pjpeg_help">Select a progressive JPEG from the spinner and enable or disable progessive JPEG support with the switch.</string>
    <string name="format_pjpeg_switch_rendering_enabled">Progressive JPEG rendering enabled</string>
    <string name="format_pjpeg_label_small">Small progressive JPEG</string>
    <string name="format_pjpeg_label_medium">Medium progressive JPEG</string>
    <string name="format_pjpeg_label_large">Large progressive JPEG</string>
    <string name="format_pjpeg_label_slow">Slow progressive JPEG</string>
    <string name="format_color_title">Color</string>
    <string name="format_color_switch">Color XML support enabled</string>
    <string name="format_color_help">This example adds a custom color XML image format (&lt;color&gt;#rrggbb&lt;/color&gt;), decoder, and Drawable factory. In this example, you have to enable the decoder globally when Fresco is initialized. Toggle the switch and restart the application to enable/disable custom color XML support.</string>
    <string name="format_svg_title">SVG</string>
    <string name="format_svg_switch">SVG support enabled</string>
    <string name="format_svg_help">This example adds a custom SVG image format, decoder, and Drawable factory that has to be enabled when Fresco is initialized. Toggle the switch and restart the application to enable/disable SVG support.</string>
    <string name="format_keyframes_title">Keyframes</string>
    <string name="format_keyframes_help">Keyframes animations are only supported on devices running Android 4.0.3 (API level 15) and above.</string>
    <string name="format_override_title">Decoder Override</string>
    <string name="format_override_help">This example overrides the decoder to be used for the given image. You can use this approach if you do not want to set a global custom decoder. The image will be decoded correctly even if global color decoding is disabled.</string>
    <string name="format_datauri_title">Data URI</string>
    <string name="format_datauri_help">Images can also be provided by data URIs such as the one below:</string>
    <string name="preferences_category_cache">Cache</string>
    <string name="preference_cache_clear_cache_title">Clear Caches</string>
    <string name="preference_cache_clear_cache_summary">Removes all cached images from Fresco\'s disk and memory caches</string>
    <string name="preference_cache_clear_cache_message_success">All caches have been cleared.</string>
    <string name="preferences_category_debug">Debug</string>
    <string name="preference_debug_show_overlay_title">Debug Overlay</string>
    <string name="drawee_rounded_corners_as_circle">Using roundAsCircle</string>
    <string name="drawee_rounded_corners_radius">16dp corner radius</string>
    <string name="drawee_rounded_corners_some">Only rounding some corners</string>
    <string name="drawee_rounded_corners_some_rtl">Only rounding some corners (RTL supported)</string>
    <string name="drawee_rounded_corners_fancy">Fancy (different radii)</string>
    <string name="drawee_rounded_corners_borders">Borders</string>
    <string name="drawee_hierarchy_load_success">Load (success)</string>
    <string name="drawee_hierarchy_load_fail">Load (fail)</string>
    <string name="drawee_hierarchy_clear">Clear</string>
    <string name="drawee_hierarchy_retry">Enable Retry</string>
</resources>