<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kotlintesting.fresco.FrescoActivity">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/sdvImage"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp120"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:placeholderImage="@drawable/ic_launcher_background" />


            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/sdvImage1"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp120"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sdvImage"
                app:placeholderImage="@drawable/ic_launcher_background"
                app:roundBottomLeft="true"
                app:roundBottomRight="true"
                app:roundTopLeft="true"
                app:roundTopRight="true"
                app:roundWithOverlayColor="@color/colorPrimary"
                app:roundedCornerRadius="5dp"
                app:roundingBorderColor="@android:color/holo_red_dark"
                app:roundingBorderWidth="2dp" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/drawee_rounded_corners_as_circle"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sdvImage1" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/drawee_round"
                style="@style/DraweeRoundedCorners.Drawee"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:roundAsCircle="true" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/drawee_rounded_corners_radius"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/drawee_round" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/drawee_radius"
                style="@style/DraweeRoundedCorners.Drawee"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:roundedCornerRadius="16dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/drawee_rounded_corners_some"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/drawee_radius" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/drawee_some"
                style="@style/DraweeRoundedCorners.Drawee"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:roundBottomLeft="false"
                app:roundTopRight="false"
                app:roundedCornerRadius="16dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/drawee_rounded_corners_some_rtl"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/drawee_some" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/drawee_some_rtl"
                style="@style/DraweeRoundedCorners.Drawee"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:roundBottomLeft="false"
                app:roundTopLeft="false"
                app:roundedCornerRadius="16dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/drawee_rounded_corners_fancy"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/drawee_some_rtl" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/drawee_fancy"
                style="@style/DraweeRoundedCorners.Drawee"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <LinearLayout
                android:id="@+id/ll_cb_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/drawee_fancy">

                <Spinner
                    android:id="@+id/scaleType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/borders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drawee_rounded_corners_borders" />
            </LinearLayout>


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_cb_spinner">

                <LinearLayout
                    android:id="@+id/ll_sfc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/load_success"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/drawee_hierarchy_load_success" />

                    <Button
                        android:id="@+id/load_fail"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/drawee_hierarchy_load_fail" />

                    <Button
                        android:id="@+id/clear"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/drawee_hierarchy_clear" />
                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/retry_enabled"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:gravity="center"
                    android:text="@string/drawee_hierarchy_retry"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_sfc" />

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/drawee"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/drawee_height_medium"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/retry_enabled"
                    app:placeholderImage="@drawable/logo"
                    app:placeholderImageScaleType="centerInside"
                    app:retryImage="@drawable/ic_retry_black_48dp" />
            </android.support.constraint.ConstraintLayout>


        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>
